Added favicon to theme html.

--- a/theme.html
+++ b/theme.html
@@ -18,6 +18,8 @@
     <link href="http://postachio-static.s3-website-us-east-1.amazonaws.com/libs/fontawesome/css/font-awesome-ie7.min.css" rel="stylesheet">
     <![endif]-->
 
+    <link rel="SHORTCUT ICON" href="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/ac_icon.ico"/>
+
     <style>
         body > h1{
             visibility: hidden;
