Updated theme css for blockquotes.

--- a/theme.html
+++ b/theme.html
@@ -70,6 +70,15 @@
             height: auto;
             border-radius: 0;
         }
+        div.post > div.post-body > div.post-content > blockquote > div:first-child{
+            padding-top: 1.5em;
+        }
+        div.post > div.post-body > div.post-content > blockquote > div:last-child{
+            padding-bottom: 1.5em;
+        }
+        div.post > div.post-body > div.post-content > blockquote > div{
+            padding: 0 1.5em;
+        }
     </style>
 
     {% if site.analytics %}
