Update css for better readability.

--- a/theme.html
+++ b/theme.html
@@ -79,6 +79,16 @@
         div.post > div.post-body > div.post-content > blockquote > div{
             padding: 0 1.5em;
         }
+        blockquote{
+            margin-top: 1em !important;
+            margin-bottom: 1em !important;
+        }
+        .post{
+            max-width: 740px;
+            margin: 0 auto;
+            font-size: 18px;
+            line-height: 36px;
+        }
     </style>
 
     {% if site.analytics %}
