--- a/theme.html
+++ b/theme.html
@@ -82,12 +82,23 @@
         blockquote{
             margin-top: 1em !important;
             margin-bottom: 1em !important;
+            line-height: 1em;
         }
         .post{
             max-width: 740px;
             margin: 0 auto;
             font-size: 18px;
             line-height: 36px;
+        }
+        @media (max-width: 560px){
+            div.post{
+                padding: 0;
+                line-height: 28px;
+                font-size: 18px;
+            }
+            blockquote{
+                margin: 1em auto !important;
+            }
         }
     </style>
 
