Added word and line spacing.

--- a/theme.html
+++ b/theme.html
@@ -90,6 +90,13 @@
             font-size: 18px;
             line-height: 36px;
         }
+        div.post div.post-body .post-content ul li {
+            margin: 0.5em auto;
+        }
+        div.post div.post-body{
+            letter-spacing: -0.003em;
+            word-spacing: 0.1em;
+        }
         @media (max-width: 560px){
             div.post{
                 padding: 0;
