Added styling to keep formatting for each line in code block.

--- a/theme.html
+++ b/theme.html
@@ -82,7 +82,12 @@
         blockquote{
             margin-top: 1em !important;
             margin-bottom: 1em !important;
-            line-height: 1em;
+            line-height: 1.2em;
+            max-width: 100%;
+            overflow: auto;
+        }
+        blockquote > div{
+            white-space: pre;
         }
         .post{
             max-width: 740px;
