Updated logo reference on site to png instead of favicon.

--- a/theme.html
+++ b/theme.html
@@ -318,7 +318,7 @@
     </div>
 
     <div class="header">
-        <h1 class="logo"><img class="icon" src="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/ac_icon.ico"/><a href="/">{{ site.name }}</a></h1>
+        <h1 class="logo"><img class="icon" src="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/ac_icon.png"/><a href="/">{{ site.name }}</a></h1>
         <ul class="nav">
             {% if pages %}
             {% for page in pages %}
