--- a/theme.html
+++ b/theme.html
@@ -20,7 +20,7 @@
 
     <link rel="SHORTCUT ICON" href="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/ac_icon.ico"/>
 
-    <link href="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/custom.css" rel="stylesheet">
+    <link type="text/css" href="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/custom.css" rel="stylesheet">
 
     {% if site.analytics %}
     <script>
