Updated references to icons and css file to GitHub pages.

--- a/theme.html
+++ b/theme.html
@@ -18,9 +18,9 @@
     <link href="http://postachio-static.s3-website-us-east-1.amazonaws.com/libs/fontawesome/css/font-awesome-ie7.min.css" rel="stylesheet">
     <![endif]-->
 
-    <link rel="SHORTCUT ICON" href="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/ac_icon.ico"/>
+    <link rel="SHORTCUT ICON" href="https://arthur-cheung.github.io/arthur-learns-icon.ico"/>
 
-    <link type="text/css" href="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/custom.css" rel="stylesheet">
+    <link type="text/css" href="https://arthur-cheung.github.io/arthur-learns-custom.css" rel="stylesheet">
 
     {% if site.analytics %}
     <script>
@@ -200,7 +200,7 @@
     </div>
 
     <div class="header">
-        <h1 class="logo"><img class="icon" src="https://raw.githubusercontent.com/arthur-cheung/postachio-theme/master/ac_icon.png"/><a href="/">{{ site.name }}</a></h1>
+        <h1 class="logo"><img class="icon" src="https://arthur-cheung.github.io/arthur-learns-icon.png"/><a href="/">{{ site.name }}</a></h1>
         <ul class="nav">
             {% if pages %}
             {% for page in pages %}
