Added icons for mobile.

--- a/theme.html
+++ b/theme.html
@@ -2,6 +2,12 @@
 <html prefix="og: http://ogp.me/ns#" xmlns:og="http://ogp.me/ns#">
 <head>
     <meta charset="utf-8">
+    <link href="https://arthur-cheung.github.io/arthur-learns-icon.png" rel="apple-touch-icon" />
+    <link href="https://arthur-cheung.github.io/arthur-learns-icon.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="https://arthur-cheung.github.io/arthur-learns-icon.png" rel="apple-touch-icon" sizes="167x167" />
+    <link href="https://arthur-cheung.github.io/arthur-learns-icon.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="https://arthur-cheung.github.io/arthur-learns-icon.png" rel="icon" sizes="192x192" />
+    <link href="https://arthur-cheung.github.io/arthur-learns-icon.png" rel="icon" sizes="128x128" />
     <title>
         {% if is_login %}Login
         {% elif is_home %}{{ site.author }}
